<resources>
    <string name="app_name">FuturePlan</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="profile">Profil</string>
    <string name="terminarz">Terminarz</string>
    <string name="pomoce">Pomoce naukowe</string>
    <string name="plan">Plan lekcji</string>
    <string name="fiszki">Fiszki</string>
    <string name="notatki">Notatki</string>
    <string name="settings">Ustawienia</string>
    <string name="oaplikacji">O aplikacji</string>

    <string name="name">Julia Podolak</string>
    <string name="email">julia.podolak123@gmail.com</string>

    <string name="organizacja">Organizacja</string>
    <string name="nauka">Nauka</string>
    <string name="inne">Inne</string>

    <string name="monday">Poniedziałek</string>
    <string name="tuesday">Wtorek</string>
    <string name="wednesday">Środa</string>
    <string name="thursday">Czwartek</string>
    <string name="friday">Piątek</string>
    <string name="saturday">Sobota</string>
    <string name="Sunday">Niedziela</string>

    <string name="log">logowanie</string>
    <string name="rej">rejestracja</string>

    <string name="imie">Imie</string>
    <string name="nazwaUzyt">Nazwa uzytkownika</string>
    <string name="nazwisko">Nazwisko</string>
    <string name="haslo">Haslo</string>
    <string name="Email">Email</string>
    <string name="powHaslo">Powtorz haslo</string>
    <string name="title">Tytul</string>
    <string name="save">zapisz</string>
    <string name="back">powrot</string>
    <string name="add">dodaj</string>
    <string name="delete">usun</string>
    <string name="authors">Autorzy</string>
    <string name="authors_description">Julia Podolak, Dominik Skąpski, Julia Korzekwa</string>
    <string name="year_of_creation">Rok powstania : 2021-2022</string>
    <string name="app_description">Do tworzenia aplikacji użyto Android Studio i języka programowania Java</string>

</resources>